# serpmcp

./: AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
src/serpmcp/: main.py
