[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "serpmcp"
version = "0.1.0a1"
description = "Yet another SerpApi MCP Server"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
    {name = "DGideas", email = "dgideas@outlook.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["serpapi", "mcp", "server", "search"]
dependencies = [
    "fastmcp>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/DGideas/serpmcp"
Repository = "https://github.com/DGideas/serpmcp"
Issues = "https://github.com/DGideas/serpmcp/issues"

[project.scripts]
serpmcp = "serpmcp.main:main"